バックオフィスAPI実装
